// ERD for sixpeng
// https://dbml.dbdiagram.io/docs syntax
//
// 구현 상태
//   구현 완료 : member, project, project_member (실제 생성되는 MySQL 스키마와 일치)
//               message, integration_status, document (translation/messages/integrations 담당 구현)
//   미구현    : briefing, briefing_source, qna_history, qna_source
//               (담당자 작업 예정, 팀 스펙 기준 정의)

Table member {
  id bigint [pk, increment]
  google_id varchar(255) [not null, unique, note: 'Google userinfo 의 sub']
  email varchar(255) [not null, unique]
  name varchar(255) [not null]
  language varchar(10) [not null, note: 'KR 또는 EN. 가입 시 Google locale 로 정하며, 판별 불가 시 기본값 EN (요구사항 5-7)']
  country varchar(255) [note: 'Google 이 주지 않아 기본값 없이 비워 둔다. 사용자가 프로필에서 채운다']
  timezone varchar(255) [default: 'UTC', note: '미설정 시 시스템 기본값 UTC (요구사항 5-7)']
  duty varchar(255) [note: '담당 업무']
  show_original_text boolean [not null, default: true, note: '요구사항 5-3/5-7 번역 표시 토글']
  show_translated_text boolean [not null, default: true, note: '둘 다 false 인 상태는 허용하지 않는다']
  created_at datetime(6) [not null]

  Note: '''
    사용자(Google OAuth 기반).

    AI 팀원은 Google 로그인 없이 애플리케이션 시작 시 시딩되는 특수 행이다.
      google_id = 'SYSTEM_AI_TEAMMATE'  (예약값, 조회 기준)
      email     = 'ai@sixpeng.internal'
      name      = 'AI 팀원'
    다른 도메인(qna, briefing 등)에서 'AI 가 한 일'을 표시할 때 이 google_id 로 조회한다.
  '''
}

Table project {
  id bigint [pk, increment]
  name varchar(255) [not null]
  status varchar(20) [not null, default: 'PENDING', note: 'PENDING(진행전) / IN_PROGRESS(진행중) / COMPLETED(완료). 생성 시 PENDING']
  created_by bigint [not null, ref: > member.id]
  created_at datetime(6) [not null]

  Note: '''
    생성자는 만들어질 때 role=PM 으로, AI 팀원은 role=AI 로 project_member 에 함께 등록된다.

    status 는 MySQL 네이티브 enum 이 아니라 varchar 다. 네이티브 enum 이면
    값을 추가할 때 ddl-auto: update 가 컬럼을 바꿔주지 못한다.
    표시 문구(진행전/진행중/완료)는 프론트가 매핑하며 응답에는 enum 이름만 나간다.
  '''
}

Table project_member {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > project.id]
  member_id bigint [not null, ref: > member.id]
  role varchar(255) [note: 'PM, Backend, Design 등. AI 팀원은 AI 고정']
  joined_at datetime(6) [not null]

  indexes {
    (project_id, member_id) [unique, name: 'uk_project_member_project_id_member_id']
  }

  Note: '''
    프로젝트 참여자. 모든 프로젝트 API 의 접근 권한 판정 기준.
    프로젝트 생성자(role=PM)와 AI 팀원(role=AI)은 참여자에서 제거할 수 없다.
  '''
}

Table message {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > project.id]
  sender_id bigint [not null, ref: > member.id]
  receiver_id bigint [not null, ref: > member.id]
  original_text text [not null]
  translated_text text [note: '한-영 자동 변환 결과']
  is_read boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]

  Note: '팀원 간 비동기 쪽지, Cultural Translation 동일 적용'
}

Table integration_status {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > project.id]
  type varchar [not null, note: 'NOTION 또는 GOOGLE_MEET']
  status varchar [not null, note: 'CONNECTED 또는 DISCONNECTED']
  access_token varchar [note: 'OAuth access token. NOTION은 자체 앱, GOOGLE_MEET은 로그인과 같은 Google Client ID로 Meet/Drive 스코프만 incremental authorization으로 추가 발급받은 토큰']
  workspace_id varchar [note: 'Notion workspace id (NOTION 전용)']
  workspace_name varchar [note: 'Notion workspace 이름 (NOTION 전용)']
  last_synced_at timestamp

  indexes {
    (project_id, type) [unique]
  }

  Note: 'access_token/workspace_*는 NOTION 연동에서만 사용, GOOGLE_MEET 행은 null'
}

Table document {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > project.id]
  source_type varchar [not null, note: 'NOTION 또는 GOOGLE_MEET']
  source_id varchar [note: '원본 시스템에서의 고유 id (예: Notion page id). 재동기화 시 중복 저장을 막는 기준']
  title varchar
  content text [not null]
  source_url varchar
  collected_at timestamp [not null, default: `now()`]

  indexes {
    (project_id, source_type, source_id) [unique]
  }

  Note: 'Notion/Google Meet 에서 수집한 원본 데이터. Context Q&A/브리핑의 검색 범위'
}

// ─────────────────────────────────────────────────────────────
// 이하 미구현
// ─────────────────────────────────────────────────────────────

Table briefing {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > project.id]
  member_id bigint [not null, ref: > member.id, note: '이 브리핑의 수신자']
  summary text [not null]
  created_at timestamp [not null, default: `now()`]
}

Table briefing_source {
  id bigint [pk, increment]
  briefing_id bigint [not null, ref: > briefing.id]
  document_id bigint [not null, ref: > document.id]

  Note: '브리핑 카드의 근거 문서 태그'
}

Table qna_history {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > project.id]
  member_id bigint [not null, ref: > member.id]
  question text [not null]
  answer text [not null]
  created_at timestamp [not null, default: `now()`]
}

Table qna_source {
  id bigint [pk, increment]
  qna_history_id bigint [not null, ref: > qna_history.id]
  document_id bigint [not null, ref: > document.id]
}
